NOTE: This branch has been repushed due to the need of renaming it remotely Minor layout fixes - Changed display of footer text to inline so that the image after that would not get onto the next line after making the resolution smaller - Changed footer content styles: now the logic of the display is based on width instead of margins

--- a/styles/index.css
+++ b/styles/index.css
@@ -24,12 +24,17 @@ body > footer {
     display: flex;
 }
 
-body > footer > .footer-text {
+body > footer > .footer-content {
     margin: 1 auto;
-    margin-left: 25%;
+    width: 60%;
+}
+
+body > footer > .footer-content > .footer-text {
+    display: inline;
 }
 
 body * .icon {
     width: 1.5em;
     height: auto;
+    display: inline;
 }
